# ledgerly

./: .gitignore  FEATURES.md  KEYCLOAK_SETUP.md  PLAN.md  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  .ruff.toml  Dockerfile.dev  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 21c476445f34_add_due_date_to_audit_reports.py  53f16aae0420_add_checklists.py  540abea5a950_add_tags_to_audit_templates.py  7f9ad2382caa_add_template_comments.py  a90f0a0d018d_add_attachments.py  ddba6afe9d11_initial_tables.py  ea93bd4c7207_add_template_versioning.py  fa8215fe189b_add_status_to_audit_templates.py
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: analytics.py  attachments.py  checklists.py  comments.py  reports.py  templates.py  versions.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/audits/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/reports/: page.tsx
frontend/lib/: api.ts  keycloak.ts
